azure/arm/VNet/vnet.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "EnvironmentPrefix": {
            "type": "string"
        },
        "Subnets": {
            "type": "string"
        }
    },
    "variables": {
        "apiVersion_NSG": "2018-08-01",
        "apiVersion_VNet": "2018-08-01"
    },
    "resources": [
        {
            "apiVersion": "[variables('apiVersion_NSG')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[concat(parameters('EnvironmentPrefix'),'-NSG-',split(parameters('Subnets'),',')[0])]",
            "location": "[resourceGroup().location]",
            "tags": {
                "Environment": "[parameters('EnvironmentPrefix')]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "Allow_HTTPS",
                        "properties": {
                            "access": "Allow",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "443",
                            "direction": "Inbound",
                            "priority": 1000,
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*"
                        }
                    },
                    {
                        "name": "Allow_HTTP",
                        "properties": {
                            "access": "Allow",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "80",
                            "direction": "Inbound",
                            "priority": 1100,
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "[variables('apiVersion_NSG')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[concat(parameters('EnvironmentPrefix'),'-NSG-',split(parameters('Subnets'),',')[1])]",
            "location": "[resourceGroup().location]",
            "tags": {
                "Environment": "[parameters('EnvironmentPrefix')]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "Allow_HTTPS",
                        "properties": {
                            "access": "Allow",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "443",
                            "direction": "Inbound",
                            "priority": 1000,
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*"
                        }
                    },
                    {
                        "name": "Allow_HTTP",
                        "properties": {
                            "access": "Allow",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "80",
                            "direction": "Inbound",
                            "priority": 1100,
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "[variables('apiVersion_NSG')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[concat(parameters('EnvironmentPrefix'),'-NSG-',split(parameters('Subnets'),',')[2])]",
            "location": "[resourceGroup().location]",
            "tags": {
                "Environment": "[parameters('EnvironmentPrefix')]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "Allow_HTTPS",
                        "properties": {
                            "access": "Allow",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "443",
                            "direction": "Inbound",
                            "priority": 1000,
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*"
                        }
                    },
                    {
                        "name": "Allow_HTTP",
                        "properties": {
                            "access": "Allow",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "80",
                            "direction": "Inbound",
                            "priority": 1100,
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "[variables('apiVersion_VNet')]",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[concat(parameters('EnvironmentPrefix'),'-VNet')]",
            "location": "[resourceGroup().location]",
            "tags": {
                "Environment": "[parameters('EnvironmentPrefix')]"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('EnvironmentPrefix'),'-NSG-',split(parameters('Subnets'),',')[0]))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('EnvironmentPrefix'),'-NSG-',split(parameters('Subnets'),',')[1]))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('EnvironmentPrefix'),'-NSG-',split(parameters('Subnets'),',')[2]))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "copy": [
                    {
                        "name": "subnets",
                        "count": "[length(split(parameters('Subnets'),','))]",
                        "input": {
                            "name": "[concat(split(parameters('Subnets'),',')[copyIndex('subnets')],'Subnet')]",
                            "properties": {
                                "addressPrefix": "[concat('10.0.',copyIndex('subnets',1),'.0/24')]",
                                "networkSecurityGroup": "[if(equals(split(parameters('Subnets'),',')[copyIndex('subnets')],'Gateway'),json('null'),json(concat('{\"id\": \"',resourceId('Microsoft.Network/networkSecurityGroups',concat(parameters('EnvironmentPrefix'),'-NSG-',split(parameters('Subnets'),',')[copyIndex('subnets')])),'\"}')))]",
                                "serviceEndpoints": []
                            }
                        }
                    }
                ]
            }
        }
    ],
    "outputs": {
    }
}
